--- a/sun/game-data/enemies/black_square.yml
+++ b/sun/game-data/enemies/black_square.yml
@@ -1,5 +1,8 @@
 enemy:
   image_path: game-data/sprites/black_square.png
+  animation_width: 50
+  animation_height: 50
+  animation_rate: 10
   position: [ 100 , 100 ]
   health: 5
   velocity: 2
