--- a/sun/game-data/enemies/enemy.yml
+++ b/sun/game-data/enemies/enemy.yml
@@ -1,6 +1,9 @@
 enemy:
   name: Game Enemy 1
   image_path: game-data/sprites/ant_level_1.png
+  animation_width: 50
+  animation_height: 50
+  animation_rate: 10
   position: [ 100 , 100 ]
   health: 5
   velocity: 2
