--- a/sun/game-data/enemies/enemy2.yml
+++ b/sun/game-data/enemies/enemy2.yml
@@ -1,4 +1,7 @@
 enemy:
   image_path: game-data/sprites/enemy2.png
+  animation_width: 50
+  animation_height: 50
+  animation_rate: 10
   health: 20
   velocity: 2
