--- a/sun/game-data/enemies/enemy_slow.yml
+++ b/sun/game-data/enemies/enemy_slow.yml
@@ -1,5 +1,8 @@
 enemy:
   image_path: game-data/sprites/enemy1.png
+  animation_width: 50
+  animation_height: 50
+  animation_rate: 10
   position: [ 100 , 100 ]
   health: 10
   velocity: 1
