--- a/sun/game-data/enemies/enemyp.yml
+++ b/sun/game-data/enemies/enemyp.yml
@@ -1,4 +1,7 @@
 enemy:
   image_path: game-data/sprites/enemy3.png
+  animation_width: 50
+  animation_height: 50
+  animation_rate: 10
   position: [ 200, 200 ]
   
