--- a/sun/test-data/menus/save_game.yml
+++ b/sun/test-data/menus/save_game.yml
@@ -1,7 +1,7 @@
 menu:
   menu_id: load_game
   entries:
-    - display_text: Save Game 1
+    - display_text: Save Game 1 {{last_save_time_for_slot}}
       action: save_game_slot
       action_argument: 1
     - display_text: Save Game 2
