oops, had some 192 specific gems

--- a/sun/Gemfile
+++ b/sun/Gemfile
@@ -20,8 +20,8 @@ gem "cucumber"
 gem "ruby-prof"
 
 
-gem 'linecache19'
-gem 'ruby-debug-base19'
-gem 'ruby-debug-base19x'
-gem 'ruby-debug19', :require => 'ruby-debug'
-gem 'ruby-debug-ide'
+#gem 'linecache19'
+#gem 'ruby-debug-base19'
+#gem 'ruby-debug-base19x'
+#gem 'ruby-debug19', :require => 'ruby-debug'
+#gem 'ruby-debug-ide'
