--- a/sun/game-data/players/load_screen_player.yml
+++ b/sun/game-data/players/load_screen_player.yml
@@ -1,5 +1,7 @@
 player:
-  image_path: game-data/sprites/player_white_circle.png
+  image_path: game-data/sprites/anima_gold_avatar.png
+  animation_width: 54
+  animation_height: 32
   movement_distance: 2
   turn_speed: 5
   health: 50
