--- a/sun/game-data/levels/h_level_intro_a/h_level_intro_a.yml
+++ b/sun/game-data/levels/h_level_intro_a/h_level_intro_a.yml
@@ -1,6 +1,6 @@
 name: h_level_intro_a
 background_image: game-data/levels/h_level_intro_a/h_level_intro_a.png
-background_music: game-data/music/drumbeats.wav
+background_music: game-data/music/silence.wav
 wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_intro_b/h_level_intro_b.yml
 player_start_position: [ 100, 100 ]
