working on non-weapon items

--- a/sun/test-data/equipment/all_equip.yml
+++ b/sun/test-data/equipment/all_equip.yml
@@ -1,5 +1,7 @@
 inventory:
-  items:
+  weapons:
     - test-data/equipment/weapon.yml
     - test-data/equipment/weapon_sound.yml
     - test-data/equipment/weapon_swung.yml
+  items:
+    - test-data/equipment/potion.yml
