--- a/sun/test-data/loadarea/9/player.yml
+++ b/sun/test-data/loadarea/9/player.yml
@@ -5,8 +5,6 @@ player:
   - 320
   - 240
   direction: 0
-  health: 5
-  max_health: 6
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
@@ -19,3 +17,10 @@ player:
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
+  stats:
+    strength: 10
+    defense: 5
+    health: 10
+    max_health: 15
+    speed: 5
+    accuracy: 5
