--- a/sun/test-data/players/expected_player.yml
+++ b/sun/test-data/players/expected_player.yml
@@ -5,8 +5,9 @@ player:
   - 36.0
   - 36.0
   direction: 0
-  health: 5
-  max_health: 6
+  stats:
+    health: 5
+    max_health: 6
   turn_speed: 90
   movement_distance: 1
   menu_action_delay: 4
