--- a/sun/test-data/players/player.yml
+++ b/sun/test-data/players/player.yml
@@ -2,5 +2,6 @@ player:
   image_path: test-data/sprites/avatar.bmp
   turn_speed: 90
   movement_distance: 1
-  health: 5
-  max_health: 6
+  stats:
+    health: 5
+    max_health: 6
