--- a/sun/test-data/players/player_moved.yml
+++ b/sun/test-data/players/player_moved.yml
@@ -2,6 +2,7 @@ player:
   image_path: test-data/sprites/avatar.bmp
   turn_speed: 90
   movement_distance: 1
-  health: 5
-  max_health: 6
   position: [ 300, 300 ]
+  stats:
+    health: 5
+    max_health: 6
