--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -49,3 +49,5 @@ event_areas:
     bottom_right: [ 389, 317 ]
     description:
       - Use arrow buttons to move.
+    info_window_position: [ 300, 250 ]
+    info_window_size: [100, 100 ]
