--- a/sun/game-data/players/load_screen_player.yml
+++ b/sun/game-data/players/load_screen_player.yml
@@ -4,8 +4,9 @@ player:
   animation_height: 16
   movement_distance: 2
   turn_speed: 5
-  health: 1000
-  max_health: 1000
+  stats:
+    health: 1000
+    max_health: 1000
   position: [ 320, 240 ]
   menu_action_delay: 12
   weapon_yaml: game-data/equipment/gun.yml
