--- a/sun/game-data/levels/h_level_intro_b/h_level_intro_b.yml
+++ b/sun/game-data/levels/h_level_intro_b/h_level_intro_b.yml
@@ -1,6 +1,6 @@
 name: h_level_intro_b
 background_image: game-data/levels/h_level_intro_b/h_level_intro_b.png
-background_music: game-data/music/drumbeats.wav
+background_music: game-data/music/silence.wav
 wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 
@@ -32,11 +32,11 @@ spawn_points:
     name: large_piggy_2
     spawn_schedule: 1 enemies every 100 ticks for 100 total ticks
     spawn_argument: [ e2 ]
-  - point: [ 700, 400 ]
+  - point: [ 850, 400 ]
     name: blahh 1
     spawn_schedule: 1 enemies every 100 ticks for 100 total ticks
     spawn_argument: [ e3 ]
-  - point: [ 600, 500 ]
+  - point: [ 850, 500 ]
     name: blaahh2
     spawn_schedule: 1 enemies every 100 ticks for 100 total ticks
     spawn_argument: [ e4 ]
