--- a/sun/game-data/enemies/horned_pig_anim.yml
+++ b/sun/game-data/enemies/horned_pig_anim.yml
@@ -6,5 +6,7 @@ enemy:
   animation_rate: 5
   position: [ 1800 , 1100 ]
   base_direction: 90
-  health: 500
   velocity: 0.5
+  stats:
+    health: 1000
+    max_health: 1000
