--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,15 +2,25 @@
 player:
   step_size: 1
   position:
-  - 409.82023858887476
-  - 151.14938808644936
-  direction: 85
-  health: 50
-  max_health: 50
+  - 179.7481426059541
+  - 165.61515086583884
+  direction: 25
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
-  enemies_killed: 0
-  image_path: game-data/sprites/player_grey_scale_circle.png
+  enemies_killed: 14
+  image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
+  image_file: 
+  animation_path: game-data/sprites/anima_gold_avatar_smaller.png
+  main_animation_name: main_player_anim
+  animation_name: main_player_anim
+  footsteps_effect_name: footsteps
+  stats:
+    strength: 10
+    defense: 5
+    health: 810
+    max_health: 1000
+    speed: 5
+    accuracy: 5
