--- a/sun/test-data/loadarea/8/player.yml
+++ b/sun/test-data/loadarea/8/player.yml
@@ -12,6 +12,8 @@ player:
   image_path: test-data/sprites/player20120411.png
   collision_priority: 4
   base_accuracy: 100
+  animation_width: 30
+  animation_height: 30
   image_file: !!null 
   animation_path: test-data/sprites/player20120411.png
   main_animation_name: main_player_anim
