--- a/sun/test-data/loads/5/player.yml
+++ b/sun/test-data/loads/5/player.yml
@@ -2,27 +2,27 @@
 player:
   step_size: 1
   position:
-  - 350
-  - 200
+  - 320
+  - 240
   direction: 0
-  turn_speed: 90
-  movement_distance: 1
-  menu_action_delay: 4
+  turn_speed: 5
+  movement_distance: 2
+  menu_action_delay: 12
   enemies_killed: 0
-  image_path: test-data/sprites/avatar.bmp
+  image_path: test-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
-  animation_width: 30
-  animation_height: 30
+  animation_width: 32
+  animation_height: 16
   image_file: !!null 
-  animation_path: test-data/sprites/avatar.bmp
+  animation_path: test-data/sprites/anima_gold_avatar_smaller.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
   stats:
     strength: 10
     defense: 5
-    health: 5
-    max_health: 6
+    health: 1000
+    max_health: 1000
     speed: 5
     accuracy: 5
