--- a/sun/game-data/loads/5/player.yml
+++ b/sun/game-data/loads/5/player.yml
@@ -2,15 +2,27 @@
 player:
   step_size: 1
   position:
-  - 405.20397500229706
-  - 190.76957271088483
-  direction: 35
-  health: 5
-  max_health: 50
+  - 197.6217926096965
+  - 160.14915852124633
+  direction: 10
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
-  enemies_killed: 9
-  image_path: game-data/sprites/player_white_circle.png
+  enemies_killed: 14
+  image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
+  animation_width: 32
+  animation_height: 16
+  image_file: !!null 
+  animation_path: game-data/sprites/anima_gold_avatar_smaller.png
+  main_animation_name: main_player_anim
+  animation_name: main_player_anim
+  footsteps_effect_name: footsteps
+  stats:
+    strength: 10
+    defense: 5
+    health: 939
+    max_health: 1000
+    speed: 5
+    accuracy: 5
