--- a/sun/game-data/loads/5/savedata.yml
+++ b/sun/game-data/loads/5/savedata.yml
@@ -1,7 +1,5 @@
 ---
 savedata:
-  level: game-data/levels/h_level_2_reward/h_level_2_reward.yml
-  player: !binary |-
-    Z2FtZS1kYXRhL2xvYWRzLzUvcGxheWVyLnltbA==
-  player_inventory: !binary |-
-    Z2FtZS1kYXRhL2xvYWRzLzUvaW52ZW50b3J5LnltbA==
+  level: game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
+  player: game-data/loads/5/player.yml
+  player_inventory: game-data/loads/5/inventory.yml
