--- a/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
+++ b/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
@@ -1,4 +1,4 @@
-name: h_level_intro_b
+name: h_level_intro_interception
 background_image: game-data/levels/h_level_intro_interception/h_level_intro_interception.png
 background_music: game-data/music/silence.wav
 reward_level: game-data/levels/h_level_1/h_level_1.yml
@@ -35,10 +35,14 @@ event_areas:
     action: LOAD_LEVEL
     description:
       - Hand over Kernel to User and continue.
+    info_window_position: [ 450, 360 ]
+    info_window_size: [343, 404 ]
     action_argument: "game-data/levels/h_level_1/h_level_1.yml"
-  - top_left: [ 388, 288 ]
-    bottom_right: [ 423, 329 ]
+  - top_left: [ 392, 290 ]
+    bottom_right: [ 425, 329 ]
     description:
-      - Welcome MSG or something else clever here.
+      - This your User. You will be attacked by the powerful Rubu.
+      - You are powerful but not be ready for this yet.
+      - I will keep your Kernel safe incase you are caught and formatted.
     info_window_position: [ 200, 230 ]
-    info_window_size: [0, 0 ]
+    info_window_size: [527, 290 ]
