--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,9 +2,9 @@
 player:
   step_size: 1
   position:
-  - 179.7481426059541
-  - 165.61515086583884
-  direction: 25
+  - 222.15804470328118
+  - 148.85640247851734
+  direction: 345
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
@@ -12,6 +12,8 @@ player:
   image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
+  animation_width: 32
+  animation_height: 16
   image_file: 
   animation_path: game-data/sprites/anima_gold_avatar_smaller.png
   main_animation_name: main_player_anim
@@ -20,7 +22,7 @@ player:
   stats:
     strength: 10
     defense: 5
-    health: 810
+    health: 821
     max_health: 1000
     speed: 5
     accuracy: 5
