enemy and player damage_sound_effect_name

--- a/sun/test-data/loadarea/5/player.yml
+++ b/sun/test-data/loadarea/5/player.yml
@@ -19,6 +19,7 @@ player:
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
+  damage_sound_effect_name: !!null 
   stats:
     strength: 10
     defense: 5
