--- a/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
+++ b/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
@@ -50,3 +50,12 @@ event_areas:
       - I will keep your Kernel safe incase you are caught and formatted.
     info_window_position: [ 190, 230 ]
     info_window_size: [575, 310 ]
+
+declared_enemies:
+  - enemy_yaml: game-data/enemies/rubu_anim.yml
+    name: e1
+spawn_points:
+  - point: [ 600, 500 ]
+    name: rubu
+    spawn_schedule: 1 enemies every 100 ticks for 100 total ticks
+    spawn_argument: [ e1 ]
