--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,9 +2,9 @@
 player:
   step_size: 1
   position:
-  - 222.15804470328118
-  - 148.85640247851734
-  direction: 345
+  - 197.20585758674554
+  - 158.06962056718388
+  direction: 265
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
@@ -19,10 +19,11 @@ player:
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
+  damage_sound_effect_name: 
   stats:
     strength: 10
     defense: 5
-    health: 821
+    health: 1000
     max_health: 1000
     speed: 5
     accuracy: 5
