cleaning up yml structure to improve constructor/loader logic, and to pave the way for validation

--- a/sun/test-data/levels/equip/equip.yml
+++ b/sun/test-data/levels/equip/equip.yml
@@ -28,12 +28,14 @@ event_areas:
     label: Equip Weapon
     action: equipment_menu
     action_argument: weapon
-    description:
-      - Change your equipment
-      - See all your weapons
+    info_window:
+      description:
+        - Change your equipment
+        - See all your weapons
   - top_left: [ 10, 250 ]
     bottom_right: [ 400, 500 ]
     label: Back
     action: back_to_level
-    description:
-      - Something
+    info_window:
+      description:
+        - Something
