--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -28,27 +28,32 @@ event_areas:
   - top_left: [ 71, 121 ]
     bottom_right: [ 263, 211 ]
     action: take_reward
-    description:
-      - Claim your reward.
+    info_window:
+      description:
+        - Claim your reward.
   - top_left: [ 379, 121 ]
     bottom_right: [ 572, 211 ]
     action: queue_save_game_event
-    description:
-      - Save your progress.
+    info_window:
+      description:
+        - Save your progress.
   - top_left: [ 72, 320 ]
     bottom_right: [ 264, 410 ]
     action: LOAD_LEVEL
-    description:
-      - Level 4, what do you get?
+    info_window:
+      description:
+        - Level 4, what do you get?
     action_argument: "game-data/levels/h_level_3/h_level_3.yml"
   - top_left: [ 378, 319 ]
     bottom_right: [ 571, 409 ]
     action: queue_load_game_event
-    description:
-      - Load previous saved games.
+    info_window:
+      description:
+        - Load previous saved games.
   - top_left: [ 406, 238 ]
     bottom_right: [ 548, 285 ]
     action: LOAD_LEVEL
-    description:
-      - Change gears?????
+    info_window:
+      description:
+        - Change gears?????
     action_argument: "game-data/levels/h_level_3_equip/h_level_3_equip.yml"
