--- a/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
+++ b/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
@@ -29,12 +29,13 @@ line_segments:
 event_areas:
   - top_left: [ 1, 1 ]
     bottom_right: [ 799, 599 ]
-    description:
-      - "Rubu You are strong to make it this far or you got help"
-      - "No matter I ripped you out of the Matrix there's no where to hide"
-      - "Get ready to be Ponged!"
-    info_window_position: [ 100, 550 ]
-    info_window_size: [ 620, 500 ]
+    info_window:
+      description:
+        - "Rubu You are strong to make it this far or you got help"
+        - "No matter I ripped you out of the Matrix there's no where to hide"
+        - "Get ready to be Ponged!"
+      position: [ 100, 550 ]
+      size: [ 620, 500 ]
     
 declared_enemies:
   - enemy_yaml: game-data/enemies/rubu_anim.yml
