--- a/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
+++ b/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
@@ -28,25 +28,28 @@ event_areas:
   - top_left: [ 80, 125 ]
     bottom_right: [ 236, 182 ]
     action: queue_save_game_event
-    description:
-      - Save your progress.
-    info_window_position: [ 60, 38 ]
-    info_window_size: [180, 75 ]
+    info_window:
+      description:
+        - Save your progress.
+      position: [ 60, 38 ]
+      size: [180, 75 ]
   - top_left: [ 560, 455 ]
     bottom_right: [ 715, 510 ]
     action: LOAD_LEVEL
     action_argument: "game-data/levels/h_level_intro_boss/h_level_intro_boss.yml"
-    description:
-      - Duplicate Kernel and continue.
-    info_window_position: [ 507, 360 ]
-    info_window_size: [268, 404 ]
+    info_window:
+      description:
+        - Duplicate Kernel and continue.
+      position: [ 507, 360 ]
+      size: [268, 404 ]
   - top_left: [ 392, 290 ]
     bottom_right: [ 425, 329 ]
-    description:
-      - This interception back to the source soon.
-      - Only enough time for a quick message, save your questions for later.
-      - You will be attacked by the powerful Rubu.
-      - You are strong but not be ready for him yet.
-      - I will keep your Kernel safe incase you are caught and formatted.
-    info_window_position: [ 190, 230 ]
-    info_window_size: [575, 310 ]
+    info_window:
+      description:
+        - This interception back to the source soon.
+        - Only enough time for a quick message, save your questions for later.
+        - You will be attacked by the powerful Rubu.
+        - You are strong but not be ready for him yet.
+        - I will keep your Kernel safe incase you are caught and formatted.
+      position: [ 190, 230 ]
+      size: [575, 310 ]
