working on lvl intro a

--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -55,6 +55,7 @@ event_areas:
     info_window_size: [ 252, 252 ]
   - top_left: [ 349, 303 ]
     bottom_right: [ 389, 337 ]
+    action: noop
     description:
       - .          Welcome to Haligonia,
       - . where the adventures are unreal.
