--- a/sun/game-data/levels/obstacle/obstacle.yml
+++ b/sun/game-data/levels/obstacle/obstacle.yml
@@ -1,9 +1,8 @@
 name: obstacle
 background_image: game-data/levels/obstacle/grass.jpg
 wayfinding: game-data/levels/obstacle/wayfinding.yml
-measurements:
-  width: 640
-  height: 480
+measurements: [ 640, 480 ]
+
 line_segments:
   - start_x: 0
     start_y: 0
