--- a/sun/game-data/levels/trivial/trivial.yml
+++ b/sun/game-data/levels/trivial/trivial.yml
@@ -1,8 +1,7 @@
 name: trivial
 background_image: game-data/levels/trivial/grass.jpg
-measurements:
-  width: 640
-  height: 480
+measurements: [ 640, 480 ]
+
 line_segments:
   - start_x: 0
     start_y: 0
