--- a/sun/game-data/levels/h_level_1/h_level_1.yml
+++ b/sun/game-data/levels/h_level_1/h_level_1.yml
@@ -5,9 +5,8 @@ wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_1_reward/h_level_1_reward.yml
 player_start_position: [ 100, 320 ]
 
-measurements:
-  width: 800
-  height: 600
+measurements: [ 800, 600 ]
+
 anded_completion_conditions:
   - condition: player_health_at_least
     argument: 1
