--- a/sun/game-data/levels/h_level_2/h_level_2.yml
+++ b/sun/game-data/levels/h_level_2/h_level_2.yml
@@ -5,7 +5,7 @@ wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_2_reward/h_level_2_reward.yml
 player_start_position: [ 125, 495 ]
 
-measurements:
+measurements: [ 1018, 622 ]
   width: 1018
   height: 622
 anded_completion_conditions:
