--- a/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
+++ b/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
@@ -5,9 +5,8 @@ background_music: game-data/music/drumbeats.wav
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 player_start_position: [ 100, 100 ]
 
-measurements:
-  width: 800
-  height: 600
+measurements: [ 800, 600 ]
+
 line_segments:
   - start_x: 0
     start_y: 0
