--- a/sun/test-data/levels/demo/demo.yml
+++ b/sun/test-data/levels/demo/demo.yml
@@ -3,9 +3,8 @@ background_image: test-data/levels/demo/grass.jpg
 background_music: test-data/music/music.wav
 wayfinding: test-data/levels/demo/wayfinding.yml
 reward_level: test-data/levels/foo/foo.yml
-measurements:
-  width: 640
-  height: 480
+measurements: [ 640, 480 ]
+
 declared_enemies:
   - enemy_yaml: test-data/enemies/enemy.yml
     name: e1
